--- a/scripts/base/themes/dracula.css
+++ b/scripts/base/themes/dracula.css
@@ -5,7 +5,7 @@
   --primary-text-color: #dee2fc;
   --secondary-text-color: #c8cde2;
   --tertiary-text-color: #b5bacb;
-  --placeholder-color: #64719F;
+  --placeholder-color: #64719f;
   --error-text-color: #ff3e4e;
 
   --editor-header-text-color: #bcc3ff;
@@ -13,23 +13,23 @@
 
   /* Backgrounds */
   --primary-background-color: #282a35;
-  --secondary-background-color: #21222B;
+  --secondary-background-color: #21222b;
   --tertiary-background-color: #404350;
   --quaternary-background-color: #575967;
 
   --editor-header-background-color: #484f6e;
   --editor-header-border-color: #343847;
   --editor-header-shadow-color: #262936bf;
-  --editor-footer-background-color: #21222B;
+  --editor-footer-background-color: #21222b;
   --editor-footer-border-color: #363847;
-  --editor-code-line-numbers-background-color: #21222B;
+  --editor-code-line-numbers-background-color: #21222b;
   --editor-code-line-numbers-border-color: #363847;
   --editor-console-toggle-background-color: #363844;
 
   /* Editor */
-  --cursor-color: #AEAFAD;
-  --line-number-color: #6572A0;
-  --active-line-number-color: #C6C6C6;
+  --cursor-color: #aeafad;
+  --line-number-color: #6572a0;
+  --active-line-number-color: #c6c6c6;
   --active-line-background-color: #454758;
   --selected-text-background-color: #454758;
   --selected-searching-text-background-color: #9b7e66;
@@ -49,65 +49,65 @@
   --constants-color: #ae8fe8;
   --math-operators-color: #ee81c3;
   --logical-operators-color: #ee81c3;
-  --separators-color: #f9f8F3;
-  --semicolons-color: #f9f8F3;
-  --brackets-color: #F8F8F3;
+  --separators-color: #f9f8f3;
+  --semicolons-color: #f9f8f3;
+  --brackets-color: #f8f8f3;
   --matching-brackets-background-color: #283032;
   --matching-brackets-border-color: #888888;
-  --nonmatching-brackets-text-color: #DB625F;
+  --nonmatching-brackets-text-color: #db625f;
 
   /* Buttons */
   --general-button-text-color: #14192d;
-  --general-normal-button-background-color: linear-gradient(0deg, #7a8ac2, #6977aa);
-  --general-normal-button-border-color: #6c7aac;
-  --general-normal-button-shadow-color: #59658f;
-  --general-hover-button-background-color: linear-gradient(0deg, #6c7aac, #5d6995);
-  --general-press-button-background-color: linear-gradient(0deg, #59658f, #4e5980);
-  --general-press-button-border-color: #59658f;
+  --general-normal-button-background-color: linear-gradient(0deg, #ae8fe8, #a885e4);
+  --general-normal-button-border-color: #a27ce0;
+  --general-normal-button-shadow-color: #9c74dc;
+  --general-hover-button-background-color: linear-gradient(0deg, #a27ce0, #9c74dc);
+  --general-press-button-background-color: linear-gradient(0deg, #9c74dc, #976cd9);
+  --general-press-button-border-color: #9c74dc;
 
   --close-button-text-color: #0e1429;
-  --close-normal-button-background-color: linear-gradient(0deg, #556bbb, #4c60a9);
-  --close-normal-button-border-color: #4b5ea6;
-  --close-normal-button-shadow-color: #425391;
-  --close-hover-button-background-color: linear-gradient(0deg, #4b5ea6, #445695);
-  --close-press-button-background-color: linear-gradient(0deg, #425391, #3b4b85);
-  --close-press-button-border-color: #425391;
+  --close-normal-button-background-color: linear-gradient(0deg, #7385ca, #6c80c6);
+  --close-normal-button-border-color: #667bc2;
+  --close-normal-button-shadow-color: #6076be;
+  --close-hover-button-background-color: linear-gradient(0deg, #667bc2, #6076be);
+  --close-press-button-background-color: linear-gradient(0deg, #6076be, #5a71ba);
+  --close-press-button-border-color: #6076be;
 
   --save-arguments-button-text-color: #14192d;
-  --save-arguments-normal-button-background-color: linear-gradient(0deg, #7a8ac2, #6977aa);
-  --save-arguments-normal-button-border-color: #6c7aac;
-  --save-arguments-normal-button-shadow-color: #59658f;
-  --save-arguments-hover-button-background-color: linear-gradient(0deg, #6c7aac, #5d6995);
-  --save-arguments-press-button-background-color: linear-gradient(0deg, #59658f, #4e5980);
-  --save-arguments-press-button-border-color: #59658f;
+  --save-arguments-normal-button-background-color: linear-gradient(0deg, #ae8fe8, #a885e4);
+  --save-arguments-normal-button-border-color: #a27ce0;
+  --save-arguments-normal-button-shadow-color: #9c74dc;
+  --save-arguments-hover-button-background-color: linear-gradient(0deg, #a27ce0, #9c74dc);
+  --save-arguments-press-button-background-color: linear-gradient(0deg, #9c74dc, #976cd9);
+  --save-arguments-press-button-border-color: #9c74dc;
 
-  --safe-button-text-color: #efefef;
-  --safe-normal-button-background-color: linear-gradient(0deg, #009e00, #00b400);
-  --safe-normal-button-border-color: #018e01;
-  --safe-normal-button-shadow-color: #008200;
-  --safe-hover-button-background-color: linear-gradient(0deg, #018e01, #00b700);
-  --safe-press-button-background-color: linear-gradient(0deg, #008200, #009a00);
-  --safe-press-button-border-color: #008200;
+  --safe-button-text-color: #edecec;
+  --safe-normal-button-background-color: linear-gradient(0deg, #048c10, #059f10);
+  --safe-normal-button-border-color: #037900;
+  --safe-normal-button-shadow-color: #026f00;
+  --safe-hover-button-background-color: linear-gradient(0deg, #037900, #059c10);
+  --safe-press-button-background-color: linear-gradient(0deg, #026f00, #048610);
+  --safe-press-button-border-color: #026f00;
 
-  --dangerous-button-text-color: #efefef;
-  --dangerous-normal-button-background-color: linear-gradient(0deg, #c92d3a, #e93745);
-  --dangerous-normal-button-border-color: #b62935;
-  --dangerous-normal-button-shadow-color: #ac2732;
-  --dangerous-hover-button-background-color: linear-gradient(0deg, #b62935, #f13645);
-  --dangerous-press-button-background-color: linear-gradient(0deg, #ac2732, #d92d3b);
-  --dangerous-press-button-border-color: #ac2732;
+  --dangerous-button-text-color: #edecec;
+  --dangerous-normal-button-background-color: linear-gradient(0deg, #bd2945, #d9334c);
+  --dangerous-normal-button-border-color: #a2253f;
+  --dangerous-normal-button-shadow-color: #992333;
+  --dangerous-hover-button-background-color: linear-gradient(0deg, #a2253f, #dc3157);
+  --dangerous-press-button-background-color: linear-gradient(0deg, #992333, #c42a4a);
+  --dangerous-press-button-border-color: #992333;
 
   /* Extension Pupup */
-  --extension-popup-glow-color: #333842;
+  --extension-popup-glow-color: #a3a6bb;
   --extension-popup-text-glow-blur-radius: 0px;
 
-  --extension-popup-switch-off-color: #3e444f;
-  --extension-popup-switch-on-primary-background-color: #72757c;
-  --extension-popup-switch-on-secondary-background-color: #494c551a;
-  --extension-popup-switch-on-primary-shadow-color: #4a4e55;
-  --extension-popup-switch-on-secondary-shadow-color: #4a4d5633;
-  --extension-popup-switch-on-text-color: #0e1116;
-  --extension-popup-switch-on-border-color: #92959b66;
+  --extension-popup-switch-off-color: #727583;
+  --extension-popup-switch-on-primary-background-color: #c3c6dd;
+  --extension-popup-switch-on-secondary-background-color: #a9acc61a;
+  --extension-popup-switch-on-primary-shadow-color: #a8abc6;
+  --extension-popup-switch-on-secondary-shadow-color: #a3a7c233;
+  --extension-popup-switch-on-text-color: #282a35;
+  --extension-popup-switch-on-border-color: #a6aac666;
 
   --extension-popup-dangerous-button-text-color: #ff2335;
   --extension-popup-dangerous-button-background-color: #ff2335;
