--- a/scripts/base/themes/visual-studio-dark.css
+++ b/scripts/base/themes/visual-studio-dark.css
@@ -15,9 +15,9 @@
   --primary-background-color: #1e1e1e;
   --secondary-background-color: #202020;
   --tertiary-background-color: #2b2b2b;
-  --quaternary-background-color: #767676;
+  --quaternary-background-color: #35699c;
 
-  --editor-header-background-color: #3c3c3c;
+  --editor-header-background-color: #333333;
   --editor-header-border-color: #2f2f2f;
   --editor-header-shadow-color: #202020bf;
   --editor-footer-background-color: #252526;
@@ -39,11 +39,11 @@
   --tooltip-border-color: #454545;
 
   /* Syntax */
-  --comments-color: #75995E;
+  --comments-color: #75995e;
   --system-functions-color: #dcdcaf;
   --system-flow-control-color: #bc89bd;
-  --variable-color: #63AADE;
-  --declared-variable-color: #63AADE;
+  --variable-color: #63aade;
+  --declared-variable-color: #63aade;
   --affected-variable-color: #9ecae8;
   --strings-color: #c5947c;
   --constants-color: #abbd9e;
@@ -57,57 +57,57 @@
   --nonmatching-brackets-text-color: #c2342b;
 
   /* Buttons */
-  --general-button-text-color: #0f0f0f;
-  --general-normal-button-background-color: linear-gradient(0deg, #898989, #757575);
-  --general-normal-button-border-color: #737373;
-  --general-normal-button-shadow-color: #636363;
-  --general-hover-button-background-color: linear-gradient(0deg, #737373, #616161);
-  --general-press-button-background-color: linear-gradient(0deg, #636363, #585858);
-  --general-press-button-border-color: #636363;
+  --general-button-text-color: #1e1e1e;
+  --general-normal-button-background-color: linear-gradient(0deg, #388ee4, #367edc);
+  --general-normal-button-border-color: #3471d4;
+  --general-normal-button-shadow-color: #3166cc;
+  --general-hover-button-background-color: linear-gradient(0deg, #3471d4, #3166cc);
+  --general-press-button-background-color: linear-gradient(0deg, #3166cc, #2e5bc4);
+  --general-press-button-border-color: #3166cc;
 
-  --close-button-text-color: #cccccc;
-  --close-normal-button-background-color: linear-gradient(0deg, #202020, #181818);
-  --close-normal-button-border-color: #1a1a1a;
-  --close-normal-button-shadow-color: #161616;
-  --close-hover-button-background-color: linear-gradient(0deg, #1a1a1a, #101010);
-  --close-press-button-background-color: linear-gradient(0deg, #161616, #0c0c0c);
-  --close-press-button-border-color: #161616;
+  --close-button-text-color: #1e1e1e;
+  --close-normal-button-background-color: linear-gradient(0deg, #898989, #757575);
+  --close-normal-button-border-color: #737373;
+  --close-normal-button-shadow-color: #636363;
+  --close-hover-button-background-color: linear-gradient(0deg, #737373, #616161);
+  --close-press-button-background-color: linear-gradient(0deg, #636363, #585858);
+  --close-press-button-border-color: #636363;
 
-  --save-arguments-button-text-color: #00003D;
-  --save-arguments-normal-button-background-color: linear-gradient(0deg, #898989, #757575);
-  --save-arguments-normal-button-border-color: #737373;
-  --save-arguments-normal-button-shadow-color: #636363;
-  --save-arguments-hover-button-background-color: linear-gradient(0deg, #737373, #616161);
-  --save-arguments-press-button-background-color: linear-gradient(0deg, #636363, #585858);
-  --save-arguments-press-button-border-color: #636363;
+  --save-arguments-button-text-color: #1e1e1e;
+  --save-arguments-normal-button-background-color: linear-gradient(0deg, #388ee4, #367edc);
+  --save-arguments-normal-button-border-color: #3471d4;
+  --save-arguments-normal-button-shadow-color: #3166cc;
+  --save-arguments-hover-button-background-color: linear-gradient(0deg, #3471d4, #3166cc);
+  --save-arguments-press-button-background-color: linear-gradient(0deg, #3166cc, #2e5bc4);
+  --save-arguments-press-button-border-color: #3166cc;
 
-  --safe-button-text-color: #ffffff;
-  --safe-normal-button-background-color: linear-gradient(0deg, #00b200, #0eb50e);
-  --safe-normal-button-border-color: #019101;
-  --safe-normal-button-shadow-color: #006e00;
-  --safe-hover-button-background-color: linear-gradient(0deg, #019101, #09a009);
-  --safe-press-button-background-color: linear-gradient(0deg, #006e00, #057205);
-  --safe-press-button-border-color: #006e00;
+  --safe-button-text-color: #efefef;
+  --safe-normal-button-background-color: linear-gradient(0deg, #008c00, #009f00);
+  --safe-normal-button-border-color: #007800;
+  --safe-normal-button-shadow-color: #006f00;
+  --safe-hover-button-background-color: linear-gradient(0deg, #007800, #009c00);
+  --safe-press-button-background-color: linear-gradient(0deg, #006f00, #008600);
+  --safe-press-button-border-color: #006f00;
 
-  --dangerous-button-text-color: #ffffff;
-  --dangerous-normal-button-background-color: linear-gradient(0deg, #e53343, #f3404f);
-  --dangerous-normal-button-border-color: #cd1222;
-  --dangerous-normal-button-shadow-color: #9e0e1a;
-  --dangerous-hover-button-background-color: linear-gradient(0deg, #cd1222, #e02231);
-  --dangerous-press-button-background-color: linear-gradient(0deg, #9e0e1a, #b21724);
-  --dangerous-press-button-border-color: #9e0e1a;
+  --dangerous-button-text-color: #efefef;
+  --dangerous-normal-button-background-color: linear-gradient(0deg, #bb2935, #d6323f);
+  --dangerous-normal-button-border-color: #a2242f;
+  --dangerous-normal-button-shadow-color: #98222c;
+  --dangerous-hover-button-background-color: linear-gradient(0deg, #a2242f, #db313f);
+  --dangerous-press-button-background-color: linear-gradient(0deg, #98222c, #c32835);
+  --dangerous-press-button-border-color: #98222c;
 
   /* Extension Pupup */
-  --extension-popup-glow-color: #717171;
+  --extension-popup-glow-color: #7e7e7e;
   --extension-popup-text-glow-blur-radius: 0px;
 
-  --extension-popup-switch-off-color: #6c6c6c;
-  --extension-popup-switch-on-primary-background-color: #9b9b9b;
-  --extension-popup-switch-on-secondary-background-color: #bababa1a;
-  --extension-popup-switch-on-primary-shadow-color: #bababa;
-  --extension-popup-switch-on-secondary-shadow-color: #6b696933;
-  --extension-popup-switch-on-text-color: #0f0f0f;
-  --extension-popup-switch-on-border-color: #d5d5d566;
+  --extension-popup-switch-off-color: #5a5a5a;
+  --extension-popup-switch-on-primary-background-color: #c9c9c9;
+  --extension-popup-switch-on-secondary-background-color: #aaaaaa1a;
+  --extension-popup-switch-on-primary-shadow-color: #a7a7a7;
+  --extension-popup-switch-on-secondary-shadow-color: #a9a9a933;
+  --extension-popup-switch-on-text-color: #1e1e1e;
+  --extension-popup-switch-on-border-color: #b0b0b066;
 
   --extension-popup-dangerous-button-text-color: #ff2335;
   --extension-popup-dangerous-button-background-color: #ff2335;
