--- a/scripts/base/themes/atom-one-dark.css
+++ b/scripts/base/themes/atom-one-dark.css
@@ -8,12 +8,12 @@
   --placeholder-color: #737476;
   --error-text-color: #ff3e4e;
 
-  --editor-header-text-color: #ACB2BE;
-  --editor-footer-text-color: #676767;
+  --editor-header-text-color: #c5c5c5;
+  --editor-footer-text-color: #8b8b8b;
 
   /* Backgrounds */
-  --primary-background-color: #292C33;
-  --secondary-background-color: #22252A;
+  --primary-background-color: #292c33;
+  --secondary-background-color: #22252a;
   --tertiary-background-color: #31343c;
   --quaternary-background-color: #565a65;
 
@@ -27,34 +27,34 @@
   --editor-console-toggle-background-color: #21252b;
 
   /* Editor */
-  --cursor-color: #5F8AF7;
-  --line-number-color: #4B5161;
-  --active-line-number-color: #ACB2BE;
-  --active-line-background-color: #2D313B;
+  --cursor-color: #5f8af7;
+  --line-number-color: #4b5161;
+  --active-line-number-color: #acb2be;
+  --active-line-background-color: #2d313b;
   --selected-text-background-color: #414858;
-  --selected-searching-text-background-color: #465478;
-  --searching-text-background-color: #262b3c4d;
-  --indent-guides-color: #3C4047;
-  --hint-matching-symbols-color: #ECEBEB;
-  --tooltip-border-color: #181A1F;
+  --selected-searching-text-background-color: #677588;
+  --searching-text-background-color: #5a7ad14d;
+  --indent-guides-color: #3c4047;
+  --hint-matching-symbols-color: #ecebeb;
+  --tooltip-border-color: #181a1f;
 
   /* Syntax */
-  --comments-color: #7F838C;
-  --system-functions-color: #74ADE9;
-  --system-flow-control-color: #BB7CD7;
-  --variable-color: #D17277;
-  --declared-variable-color: #D17277;
+  --comments-color: #7f838c;
+  --system-functions-color: #74ade9;
+  --system-flow-control-color: #bb7cd7;
+  --variable-color: #d17277;
+  --declared-variable-color: #d17277;
   --affected-variable-color: #d18f72;
-  --strings-color: #A1C281;
-  --constants-color: #C99C6E;
-  --math-operators-color: #6FB4C0;
-  --logical-operators-color: #6FB4C0;
-  --separators-color: #ACB2BE;
-  --semicolons-color: #ACB2BE;
-  --brackets-color: #C99C6E;
-  --matching-brackets-background-color: #535A69;
+  --strings-color: #a1c281;
+  --constants-color: #c99c6e;
+  --math-operators-color: #6fb4c0;
+  --logical-operators-color: #6fb4c0;
+  --separators-color: #acb2be;
+  --semicolons-color: #acb2be;
+  --brackets-color: #c99c6e;
+  --matching-brackets-background-color: #535a69;
   --matching-brackets-border-color: #393f4d;
-  --nonmatching-brackets-text-color: #C4372E;
+  --nonmatching-brackets-text-color: #c4372e;
 
   /* Buttons */
   --general-button-text-color: #000000;
@@ -66,12 +66,12 @@
   --general-press-button-border-color: #797979;
 
   --close-button-text-color: #000000;
-  --close-normal-button-background-color: linear-gradient(0deg, #A48D8D, #948181);
-  --close-normal-button-border-color: #9A8383;
-  --close-normal-button-shadow-color: #8F7A7A;
-  --close-hover-button-background-color: linear-gradient(0deg, #9A8383, #8C7474);
-  --close-press-button-background-color: linear-gradient(0deg, #8F7A7A, #807070);
-  --close-press-button-border-color: #8F7A7A;
+  --close-normal-button-background-color: linear-gradient(0deg, #a48d8d, #948181);
+  --close-normal-button-border-color: #9a8383;
+  --close-normal-button-shadow-color: #8f7a7a;
+  --close-hover-button-background-color: linear-gradient(0deg, #9a8383, #8c7474);
+  --close-press-button-background-color: linear-gradient(0deg, #8f7a7a, #807070);
+  --close-press-button-border-color: #8f7a7a;
 
   --save-arguments-button-text-color: #000000;
   --save-arguments-normal-button-background-color: linear-gradient(0deg, #a4a4a4, #858585);
@@ -81,32 +81,32 @@
   --save-arguments-press-button-background-color: linear-gradient(0deg, #797979, #6a6a6a);
   --save-arguments-press-button-border-color: #797979;
 
-  --safe-button-text-color: #efefef;
-  --safe-normal-button-background-color: linear-gradient(0deg, #008c00, #009f00);
-  --safe-normal-button-border-color: #007800;
-  --safe-normal-button-shadow-color: #006f00;
-  --safe-hover-button-background-color: linear-gradient(0deg, #007800, #009c00);
-  --safe-press-button-background-color: linear-gradient(0deg, #006f00, #008600);
-  --safe-press-button-border-color: #006f00;
+  --safe-button-text-color: #d4d4d4;
+  --safe-normal-button-background-color: linear-gradient(0deg, #007c00, #008f00);
+  --safe-normal-button-border-color: #006c00;
+  --safe-normal-button-shadow-color: #006200;
+  --safe-hover-button-background-color: linear-gradient(0deg, #006c00, #008c00);
+  --safe-press-button-background-color: linear-gradient(0deg, #006200, #007600);
+  --safe-press-button-border-color: #006200;
 
-  --dangerous-button-text-color: #efefef;
-  --dangerous-normal-button-background-color: linear-gradient(0deg, #bb2935, #d6323f);
-  --dangerous-normal-button-border-color: #a2242f;
-  --dangerous-normal-button-shadow-color: #98222c;
-  --dangerous-hover-button-background-color: linear-gradient(0deg, #a2242f, #db313f);
-  --dangerous-press-button-background-color: linear-gradient(0deg, #98222c, #c32835);
-  --dangerous-press-button-border-color: #98222c;
+  --dangerous-button-text-color: #d4d4d4;
+  --dangerous-normal-button-background-color: linear-gradient(0deg, #a52031, #c12c38);
+  --dangerous-normal-button-border-color: #91202b;
+  --dangerous-normal-button-shadow-color: #881e29;
+  --dangerous-hover-button-background-color: linear-gradient(0deg, #91202b, #c52b38);
+  --dangerous-press-button-background-color: linear-gradient(0deg, #881e29, #b12431);
+  --dangerous-press-button-border-color: #881e29;
 
   /* Extension Pupup */
-  --extension-popup-glow-color: #595959;
+  --extension-popup-glow-color: #777777;
   --extension-popup-text-glow-blur-radius: 0px;
 
-  --extension-popup-switch-off-color: #515151;
-  --extension-popup-switch-on-primary-background-color: #818181;
-  --extension-popup-switch-on-secondary-background-color: #7878781a;
-  --extension-popup-switch-on-primary-shadow-color: #545454;
-  --extension-popup-switch-on-secondary-shadow-color: #5e5e5e33;
-  --extension-popup-switch-on-text-color: #272727;
+  --extension-popup-switch-off-color: #646464;
+  --extension-popup-switch-on-primary-background-color: #a2a2a2;
+  --extension-popup-switch-on-secondary-background-color: #7b7b7b1a;
+  --extension-popup-switch-on-primary-shadow-color: #808080;
+  --extension-popup-switch-on-secondary-shadow-color: #80808033;
+  --extension-popup-switch-on-text-color: #292c33;
   --extension-popup-switch-on-border-color: #81818166;
 
   --extension-popup-dangerous-button-text-color: #ff2335;
