--- a/scripts/base/themes/cobalt2.css
+++ b/scripts/base/themes/cobalt2.css
@@ -5,17 +5,17 @@
   --primary-text-color: #ffe493;
   --secondary-text-color: #e0c882;
   --tertiary-text-color: #c0ab6f;
-  --placeholder-color: #A9A9A9;
-  --error-text-color: #FF4500;
+  --placeholder-color: #a9a9a9;
+  --error-text-color: #ff4500;
 
   --editor-header-text-color: #ffe493;
   --editor-footer-text-color: #b7a264;
 
   /* Backgrounds */
-  --primary-background-color: #233a4f;
-  --secondary-background-color: #152536;
-  --tertiary-background-color: #1a2d41;
-  --quaternary-background-color: #2e465c;
+  --primary-background-color: #223d52;
+  --secondary-background-color: #132131;
+  --tertiary-background-color: #192d40;
+  --quaternary-background-color: #355069;
 
   --editor-header-background-color: #152330;
   --editor-header-border-color: #121f2b;
@@ -27,34 +27,34 @@
   --editor-console-toggle-background-color: #1a2b3b;
 
   /* Editor */
-  --cursor-color: #F6C844;
-  --line-number-color: #AAAAAA;
-  --active-line-number-color: #C6C6C6;
-  --active-line-background-color: #294560;
-  --selected-text-background-color: #204F9E;
-  --selected-searching-text-background-color: #785A4D;
+  --cursor-color: #f6c844;
+  --line-number-color: #aaaaaa;
+  --active-line-number-color: #c6c6c6;
+  --active-line-background-color: #2d526b;
+  --selected-text-background-color: #204f9e;
+  --selected-searching-text-background-color: #785a4d;
   --searching-text-background-color: #76be384d;
   --indent-guides-color: #405262;
-  --hint-matching-symbols-color: #F6C844;
+  --hint-matching-symbols-color: #f6c844;
   --tooltip-border-color: #1b2c3c;
 
   /* Syntax */
-  --comments-color: #3B86F7;
-  --system-functions-color: #F6C844;
-  --system-flow-control-color: #F1A239;
-  --variable-color: #E4EFFD;
-  --declared-variable-color: #E4EFFD;
+  --comments-color: #3b86f7;
+  --system-functions-color: #f6c844;
+  --system-flow-control-color: #f1a239;
+  --variable-color: #e4effd;
+  --declared-variable-color: #e4effd;
   --affected-variable-color: #fbffd2;
-  --strings-color: #AEEC94;
-  --constants-color: #ED6C8D;
-  --math-operators-color: #F1A239;
-  --logical-operators-color: #F1A239;
-  --separators-color: #E4EFFD;
-  --semicolons-color: #E4EFFD;
-  --brackets-color: #F9D849;
-  --matching-brackets-background-color: #1B3956;
-  --matching-brackets-border-color: #89814D;
-  --nonmatching-brackets-text-color: #CA3C2F;
+  --strings-color: #aeec94;
+  --constants-color: #ed6c8d;
+  --math-operators-color: #f1a239;
+  --logical-operators-color: #f1a239;
+  --separators-color: #e4effd;
+  --semicolons-color: #e4effd;
+  --brackets-color: #f9d849;
+  --matching-brackets-background-color: #1b3956;
+  --matching-brackets-border-color: #89814d;
+  --nonmatching-brackets-text-color: #ca3c2f;
 
   /* Buttons */
   --general-button-text-color: #233a4f;
@@ -73,7 +73,7 @@
   --close-press-button-background-color: linear-gradient(0deg, #2e4f6d, #27415b);
   --close-press-button-border-color: #2e4f6d;
 
-  --save-arguments-button-text-color: #2A2D3D;
+  --save-arguments-button-text-color: #2a2d3d;
   --save-arguments-normal-button-background-color: linear-gradient(0deg, #9194a7, #86899b);
   --save-arguments-normal-button-border-color: #838697;
   --save-arguments-normal-button-shadow-color: #727484;
