--- a/scripts/base/themes/synthwave-84.css
+++ b/scripts/base/themes/synthwave-84.css
@@ -2,18 +2,18 @@
   /* --- Colors --- */
 
   /* Text */
-  --primary-text-color: #D680FF;
+  --primary-text-color: #d680ff;
   --secondary-text-color: #bf71e2;
   --tertiary-text-color: #9b5bb9;
-  --placeholder-color: #928E99;
-  --error-text-color: #FF4500;
+  --placeholder-color: #928e99;
+  --error-text-color: #ff4500;
 
-  --editor-header-text-color: #D680FF;
-  --editor-footer-text-color: #6a6976;
+  --editor-header-text-color: #d680ff;
+  --editor-footer-text-color: #844e9d;
 
   /* Backgrounds */
   --primary-background-color: #252334;
-  --secondary-background-color: #231B2E;
+  --secondary-background-color: #231b2e;
   --tertiary-background-color: #2d2b3e;
   --quaternary-background-color: #494851;
 
@@ -27,54 +27,54 @@
   --editor-console-toggle-background-color: #1e1c2d;
 
   /* Editor */
-  --cursor-color: #E98577;
+  --cursor-color: #e98577;
   --line-number-color: #878690;
-  --active-line-number-color: #D3D3D6;
+  --active-line-number-color: #d3d3d6;
   --active-line-background-color: #413961;
-  --selected-text-background-color: #413F4E;
-  --selected-searching-text-background-color: #A0733D;
+  --selected-text-background-color: #413f4e;
+  --selected-searching-text-background-color: #a0733d;
   --searching-text-background-color: #9067474d;
   --indent-guides-color: #444250;
-  --hint-matching-symbols-color: #E98577;
-  --tooltip-border-color: #31303A;
+  --hint-matching-symbols-color: #e98577;
+  --tooltip-border-color: #31303a;
 
   /* Syntax */
-  --comments-color: #858BB9;
-  --system-functions-color: #7BF5F4;
-  --system-flow-control-color: #F9DF72;
-  --variable-color: #EF85D7;
-  --declared-variable-color: #EF85D7;
+  --comments-color: #858bb9;
+  --system-functions-color: #7bf5f4;
+  --system-flow-control-color: #f9df72;
+  --variable-color: #ef85d7;
+  --declared-variable-color: #ef85d7;
   --affected-variable-color: #c277ff;
-  --strings-color: #F0914C;
-  --constants-color: #65C6DD;
-  --math-operators-color: #F9DF72;
-  --logical-operators-color: #F9DF72;
-  --separators-color: #BBBBBB;
-  --semicolons-color: #BBBBBB;
-  --brackets-color: #F9D849;
-  --matching-brackets-background-color: #2A263E;
-  --matching-brackets-border-color: #4B5491;
-  --nonmatching-brackets-text-color: #C83734;
+  --strings-color: #f0914c;
+  --constants-color: #65c6dd;
+  --math-operators-color: #f9df72;
+  --logical-operators-color: #f9df72;
+  --separators-color: #bbbbbb;
+  --semicolons-color: #bbbbbb;
+  --brackets-color: #f9d849;
+  --matching-brackets-background-color: #2a263e;
+  --matching-brackets-border-color: #4b5491;
+  --nonmatching-brackets-text-color: #c83734;
 
   /* Buttons */
-  --general-button-text-color: #231B2E;
-  --general-normal-button-background-color: linear-gradient(0deg, #D680FF, #bf72e2);
+  --general-button-text-color: #231b2e;
+  --general-normal-button-background-color: linear-gradient(0deg, #d680ff, #bf72e2);
   --general-normal-button-border-color: #bf71e3;
   --general-normal-button-shadow-color: #a964c8;
   --general-hover-button-background-color: linear-gradient(0deg, #bf71e3, #ad66ce);
   --general-press-button-background-color: linear-gradient(0deg, #a964c8, #9658b3);
   --general-press-button-border-color: #a964c8;
 
-  --close-button-text-color: #231B2E;
-  --close-normal-button-background-color: linear-gradient(0deg, #C834FF, #b72ee8);
+  --close-button-text-color: #231b2e;
+  --close-normal-button-background-color: linear-gradient(0deg, #c834ff, #b72ee8);
   --close-normal-button-border-color: #b52ee7;
   --close-normal-button-shadow-color: #a42ad0;
   --close-hover-button-background-color: linear-gradient(0deg, #b52ee7, #a028cc);
   --close-press-button-background-color: linear-gradient(0deg, #a42ad0, #8d22b3);
   --close-press-button-border-color: #a42ad0;
 
-  --save-arguments-button-text-color: #231B2E;
-  --save-arguments-normal-button-background-color: linear-gradient(0deg, #D680FF, #bf72e2);
+  --save-arguments-button-text-color: #231b2e;
+  --save-arguments-normal-button-background-color: linear-gradient(0deg, #d680ff, #bf72e2);
   --save-arguments-normal-button-border-color: #bf71e3;
   --save-arguments-normal-button-shadow-color: #a964c8;
   --save-arguments-hover-button-background-color: linear-gradient(0deg, #bf71e3, #ad66ce);
@@ -107,7 +107,7 @@
   --extension-popup-switch-on-primary-shadow-color: #ba69e0;
   --extension-popup-switch-on-secondary-shadow-color: #af63d333;
   --extension-popup-switch-on-text-color: #252334;
-  --extension-popup-switch-on-border-color: #D680FF66;
+  --extension-popup-switch-on-border-color: #d680ff66;
 
   --extension-popup-dangerous-button-text-color: #ff2335;
   --extension-popup-dangerous-button-background-color: #ff2335;
